* [Java] class.newInstance -> class.getDeclaredConstructor().newInstance()